whoogle/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoogle
  labels:
    helm.sh/chart: whoogle-0.1.0
    app.kubernetes.io/name: whoogle
    app.kubernetes.io/instance: whoogle
    app.kubernetes.io/version: "0.7.2"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: whoogle
      app.kubernetes.io/instance: whoogle
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoogle
        app.kubernetes.io/instance: whoogle
    spec:
      serviceAccountName: whoogle
      securityContext:
        {}
      containers:
        - name: whoogle
          securityContext:
            runAsUser: 0
          image: "registry.durp.info/benbusby/whoogle-search:0.8.2"
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
