whoogle/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoogle
  labels:
    helm.sh/chart: whoogle-0.1.0
    app.kubernetes.io/name: whoogle
    app.kubernetes.io/instance: whoogle
    app.kubernetes.io/version: "0.7.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: whoogle
    app.kubernetes.io/instance: whoogle
