whoogle/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoogle-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoogle.durp.info`) && PathPrefix(`/`) 
    kind: Rule
    services:
    - name: whoogle
      port: 5000
  tls:
    secretName: whoogle-tls

---

kind: Service
apiVersion: v1
metadata:
  name: whoogle-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whoogle.durp.info
spec:
  type: ExternalName
  externalName: durp.info
